# real_lidarbot

./: .gitignore  CMakeLists.txt  README.md  launch_file_notes.txt  package.xml
action/: GoToGoal.action
config/: ekf.yaml  my_controllers copy.yaml  my_controllers.yaml
launch/: bringup_launch.py  imu.launch.py  imu_launch.py  lidarbot_launch.py  lidarbot_real_launch.py  lidarbot_sim_launch copy.py  lidarbot_sim_launch.py  lidarbot_sim_old_launch.py  odometry_launch.py  robot_state_publisher_launch.py  rplidar.launch.py  rplidar_launch.py  view_lidarbot_launch.py
models/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  imu.xacro  inertial_macros.xacro  lidar.xacro  lidarbot copy.urdf  lidarbot.urdf  lidarbot.urdf.xacro  lidarbot_core copy.xacro  lidarbot_core.xacro  ros2_control.xacro
models/lidarbot_description/: model.config  model.sdf  model_diff_drive.sdf
msg/: Tick.msg
real_lidarbot/: PCA9685.py  motor.py  mpu6050.py  utils.py
rviz/: lidarbot_sim.rviz  rviz_basic_settings.rviz  view_lidarbot.rviz
scripts/: .goal_action_server.py.swp  encoder_node.py  encoder_test.py  go_to_goal_node.py  goal_action_server.py  imu_node.py  joystick_pad_node.py  joystick_test.py  motor_test.py  odometry_node.py  robot_movt_test.py  rviz_click_to_2d_node.py  simple_motor_subscriber.py
scripts/encoder/: encoder_test.py
worlds/: obstacles.world
